Añadir estilos y elementos de diseño al listado de productos

--- a/listadoProductos.html
+++ b/listadoProductos.html
@@ -121,82 +121,70 @@
     <main>
         <!-- Contenido principal -->
         <section>
-            <div class="row d-flex justify-content-center categorias">
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Arboles</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
+            <navbar class="navegacion-categorias navbar-expand-sm">
+                <div class="row justify-content-center">
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/arbol.svg" alt="arbol" />
+                                <h3 class="text-center fs-6">Arboles</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/arbusto.svg" alt="arbusto" />
+                                <h3 class="text-center fs-6">Arbustos</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/cactus.svg" alt="cactus" />
+                                <h3 class="text-center fs-6">Cactus</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/flores.svg" alt="flores" />
+                                <h3 class="text-center fs-6">Flores</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/implementos.svg" alt="implementos" />
+                                <h3 class="text-center fs-6">Implementos</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/cuidados.svg" alt="cuidados" />
+                                <h3 class="text-center fs-6">Cuidados</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-2 col-lg-1 mx-3">
+                        <a href="listadoProductos.html">
+                            <div class="contenedor-categoria mt-3">
+                                <img class="img-fluid" src="img/enredaderas.svg" alt="enredaderas" />
+                                <h3 class="text-center fs-6">Enredaderas</h3>
+                            </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Arbustos</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Cactus</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Flores</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Implementos</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Cuidados</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                    <div>
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                            <h1 class="fs-4">Enredaderas</h1>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Link 1</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            </navbar>
         </section>
         <!-- Barra de búsqueda y ordenamiento -->
         <section>
-            <div class="row d-flex justify-content-end">
+            <div class="row d-flex justify-content-end mt-5">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 ml-5">
                     <form class="form-inline">
                         <input class="form-control mr-sm-2 buscar" type="search" placeholder="Buscar producto"
@@ -261,140 +249,151 @@
                 </div>
                 <div class="col-12 col-md-9 col-lg-9">
                     <div class="row">
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <<div class="col-12 col-sm-6 col-md-6 col-lg-4">
-                            <div class="conteiner m-1">
+                        <<div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                            <div class="conteiner producto m-1">
                                 <div class="card p-4">
                                     <img src="img/planta-imagen1.jpeg" class="card-img" alt="arbol1">
                                     <div class="card-body">
                                         <h5 class="card-title
                                         ">Producto 1</h5>
-                                        <button type="button" class="btn btn-primary">Comprar</button>
+                                        <a href="producto.html"><button type="button"
+                                                class="btn btn-primary">Comprar</button></a>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
     </main>
