--- a/listadoProductos.html
+++ b/listadoProductos.html
@@ -212,39 +212,37 @@
         <section>
             <div class="row mt-5">
                 <div class="col-12 col-md-3 col-lg-3">
-                    <div class="row">
-                        <div class="col-12">
-                            <button class="boton-filtro fs-4" data-bs-toggle="collapse"
-                                data-bs-target="#demo">Categorias</button>
-                            <img class="flecha-abajo" src="img/flecha-abajo.svg" alt="flecha-abajo"
-                                data-bs-toggle="collapse" data-bs-target="#demo">
-                            <div id="demo" class="collapse mx-3">
-                                <div class="form-check mt-2">
-                                    <input type="checkbox" class="form-check-input" id="check1">
-                                    <label class="form-check-label" for="check1">Opción 1</label>
-                                </div>
-                                <div class="form-check mt-2">
-                                    <input type="checkbox" class="form-check-input" id="check2">
-                                    <label class="form-check-label" for="check2">Opción 2</label>
+                    <div class="contenedor-filtro ">
+                        <div class="row">
+                            <div class="col-12 contenedor-dropdown mt-1">
+                                <button class="boton-filtro fs-4" data-bs-toggle="collapse"
+                                    data-bs-target="#demo">Categorias</button>
+                                <div id="demo" class="collapse mx-3 mb-4">
+                                    <div class="form-check mt-2">
+                                        <input type="checkbox" class="form-check-input" id="check1">
+                                        <label class="form-check-label" for="check1">Opción 1</label>
+                                    </div>
+                                    <div class="form-check mt-2">
+                                        <input type="checkbox" class="form-check-input" id="check2">
+                                        <label class="form-check-label" for="check2">Opción 2</label>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="col-12 contenedor-dropdown mt-1">
+                                <button class="boton-filtro fs-4" data-bs-toggle="collapse"
+                                    data-bs-target="#demo2">Precios</button>
+                                <div id="demo2" class="collapse mx-3 mb-4">
+                                    <div class="form-check mt-2">
+                                        <input type="checkbox" class="form-check-input" id="check-precios">
+                                        <label class="form-check-label" for="check-precios">Opción 1</label>
+                                    </div>
+                                    <div class="form-check mt-2">
+                                        <input type="checkbox" class="form-check-input" id="check-precios2">
+                                        <label class="form-check-label" for="check-precios2">Opción 2</label>
+                                    </div>
+                                </div>
+                            </div>>
                         </div>
-                        <div class="col-12">
-                            <button class="boton-filtro fs-4" data-bs-toggle="collapse"
-                                data-bs-target="#demo2">Precios</button>
-                            <img class="flecha-abajo" src="img/flecha-abajo.svg" alt="flecha-abajo"
-                                data-bs-toggle="collapse" data-bs-target="#demo2">
-                            <div id="demo2" class="collapse mx-3">
-                                <div class="form-check mt-2">
-                                    <input type="checkbox" class="form-check-input" id="check-precios">
-                                    <label class="form-check-label" for="check-precios">Opción 1</label>
-                                </div>
-                                <div class="form-check mt-2">
-                                    <input type="checkbox" class="form-check-input" id="check-precios2">
-                                    <label class="form-check-label" for="check-precios2">Opción 2</label>
-                                </div>
-                            </div>
-                        </div>>
                     </div>
                 </div>
                 <div class="col-12 col-md-9 col-lg-9">
@@ -395,6 +393,17 @@
                 </div>
             </div>
             </div>
+        </section>
+        <section class="paginacion">
+            <nav>
+                <ul class="pagination d-flex justify-content-center">
+                  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+              </nav>
         </section>
     </main>
     <footer class="mt-5 p-4 justify-content-right">
