--- a/producto.html
+++ b/producto.html
@@ -164,9 +164,9 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-                    <div class="container m-3">
-                        <h1 class="titulo-producto">Nombre del producto</h1>
-                        <p class="descripcion-producto">Descripción del producto Lorem ipsum dolor sit amet consectetur
+                    <div class="container m-3 d-flex flex-column ">
+                        <h1 class="titulo-producto my-4">Nombre del producto</h1>
+                        <p class="descripcion-producto my-4">Descripción del producto Lorem ipsum dolor sit amet consectetur
                             adipisicing elit. Pariatur doloremque fugiat alias debitis possimus sequi dolores suscipit
                             hic obcaecati aspernatur? Quasi deserunt maiores quod! Laboriosam consequatur numquam quam
                             necessitatibus nam.
@@ -174,13 +174,13 @@
                             magni, quidem adipisci consequuntur incidunt ipsam quae, odit ex! Suscipit ab, nulla
                             perferendis porro repellendus voluptatem. Nobis, voluptate?
                         </p>
-                        <p class="precio-producto">Precio del producto</p>
+                        <p class="precio-producto my-4">Precio del producto</p>
                         <div class="row">
-                            <div class="col">
+                            <div class="col my-4">
                                 <label for="cantidad">Cantidad</label>
                                 <input type="number" class="form-control" id="cantidad" value="1">
                             </div>
-                            <div class="col">
+                            <div class="col my-5">
                                 <button type="button" class="btn btn-primary">Agregar al carrito</button>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                 </div>
             </div>
         </section>
-        <section class="d-flex justify-content-center">
+        <section class="d-flex justify-content-center Descripcion">
             <div class="container m-3 text-center">
                 <h1>Descripcion y cuidados</h1>
                 <p class="descripcion-producto">Descripción del producto Lorem ipsum dolor sit amet consectetur
