--- a/pagoexitoso.html
+++ b/pagoexitoso.html
@@ -1,141 +1,140 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-
-    <title>Título de la página</title>
-</head>
-<header>
-    <!-- barra de navegación-->
-    <nav class="navbar navbar-expand-sm">
-        <div>
-            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
+        <title>Título de la página</title>
+    </head>
+    <header>
+        <!-- barra de navegación-->
+        <nav class="navbar navbar-expand-sm">
+            <div>
+                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
+                    <img class="img-fluid profile" src="img/perfil.png" />
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Perfil</a></li>
+                    <li><a class="dropdown-item" href="#">Inventario Admi</a></li>
+                    <li><a class="dropdown-item" href="#">Historial de Compras</a></li>
+                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                </ul>
+            </div>
+            <div class="container-fluid">
+                <!-- Título centrado -->
+                <div class="mx-auto">
+                    <a class="navbar-brand" href="index.html">DRUIDS</a>
+                </div>
+            </div>
+            <!-- Botones de perfil y carrito de compra -->
+            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
                 <img class="img-fluid profile" src="img/perfil.png" />
             </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Perfil</a></li>
-                <li><a class="dropdown-item" href="#">Inventario Admi</a></li>
-                <li><a class="dropdown-item" href="#">Historial de Compras</a></li>
-                <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
-            </ul>
-        </div>
-        <div class="container-fluid">
-            <!-- Título centrado -->
-            <div class="mx-auto">
-                <a class="navbar-brand" href="index.html">DRUIDS</a>
-            </div>
-        </div>
-        <!-- Botones de perfil y carrito de compra -->
-        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
-            <img class="img-fluid profile" src="img/perfil.png" />
-        </button>
-        <button type="button" class="btn">
-            <a href="carrito.html">
-                <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
-            </a>
-        </button>
-    </nav>
-    <!-- Modal de inicio de sesión -->
-    <div class="modal" id="myModal">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
+            <button type="button" class="btn">
+                <a href="carrito.html">
+                    <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
+                </a>
+            </button>
+        </nav>
+        <!-- Modal de inicio de sesión -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
 
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Inicio de sesion</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Inicio de sesion</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
 
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Username</label>
-                            <input type="text" class="form-control" id="username" placeholder="Enter your username">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password">
-                        </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Sign In</button>
-                            <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
-                                data-bs-target="#registerModal">Register</button>
-                        </div>
-                    </form>
-                </div>
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- The Register Modal -->
-    <div class="modal" id="registerModal">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Registration</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password">
-                        </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Register</button>
-                        </div>
-                    </form>
-                </div>
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                            </div>
+                            <div class="d-grid gap-2">
+                                <button type="submit" class="btn btn-primary">Sign In</button>
+                                <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
+                                    data-bs-target="#registerModal">Register</button>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</header>
-<body>
-    <main>
-        <div class="container mt-3">
-            <div class="card">
-              <div class="card-body text-center">
-                <h1>¡Pago Exitoso!</h1>
-                <p class="lead">Tu pago se ha realizado correctamente.</p>
-                <img src="imagen-exito.png" alt="Imagen de éxito" class="img-fluid" style="width: 200px;">
-                <p>Gracias por tu compra.</p>
-                <a href="index.html" class="btn btn-primary">Volver al Inicio</a>
-              </div>
+        <!-- The Register Modal -->
+        <div class="modal" id="registerModal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Registration</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                            </div>
+                            <div class="d-grid gap-2">
+                                <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Register</button>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
-          </div>
-    </main>
-    <footer class="mt-5 p-4 justify-content-right">
+        </div>
+    </header>
+    <body>
+        <main>
+            <div class="container mt-3">
+                <div class="card">
+                <div class="card-body text-center">
+                    <h1>¡Pago Exitoso!</h1>
+                    <p class="lead">Tu pago se ha realizado correctamente.</p>
+                    <img src="img/pagoExitoso.svg" alt="Imagen de éxito" class="img-fluid" style="width: 200px;">
+                    <p>Gracias por tu compra.</p>
+                    <a href="index.html" class="btn btn-primary">Volver al Inicio</a>
+                </div>
+                </div>
+            </div>
+        </main>
+        
+    </body>
+    <footer class="mt-3 p-5 justify-content-right">
         <!-- Contenido del pie de página -->
         <a class="p-5 text-white" href="#">About Us</a>
         <a class="p-5 text-white" href="#">Contacto</a>
     </footer>
-</body>
-
 </html>
