--- a/listadoProductos.html
+++ b/listadoProductos.html
@@ -191,7 +191,7 @@
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
                         </form>
                     </div>
-                    <div class="col-12 col-sm-4 col-md-4 col-lg-3 mt-3">
+                    <div class="col-12 col-sm-4 col-md-4 col-lg-3">
                         <div class="btn-group">
                             <button type="button" class="btn btn-outline-secondary dropdown-toggle"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -210,9 +210,12 @@
             <!-- Listado de productos -->
             <section>
                 <div class="row mt-5">
-                    <div class="col-12 col-md-3 col-lg-3">
+                    <div class="col-12 col-md-2 col-lg-2">
                         <div class="contenedor-filtro ">
                             <div class="row">
+                                <div class="col-12 header-filtro">
+                                    <h3 class="text-center">Filtros</h3>
+                                </div>
                                 <div class="col-12 contenedor-dropdown mt-1">
                                     <button class="boton-filtro fs-4" data-bs-toggle="collapse"
                                         data-bs-target="#demo">Categorias</button>
